OSSM/1_34/must-gather.local.2392184673243315730/registry-redhat-io-openshift-service-mesh-istio-must-gather-rhel8-sha256-88edd13801b2ba7aa4bc7c344e18992e2ebd100cc49e959b315bb7e8c8d20298/namespaces/eventing-e2e3/security.istio.io/authorizationpolicies/allow-from-knative-and-istio.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"security.istio.io/v1beta1","kind":"AuthorizationPolicy","metadata":{"annotations":{},"name":"allow-from-knative-and-istio","namespace":"eventing-e2e3"},"spec":{"action":"ALLOW","rules":[{"from":[{"source":{"namespaces":["eventing-e2e3","knative-serving","istio-system"]}}]},{"from":[{"source":{"namespaces":["knative-eventing"]}}],"when":[{"key":"request.headers[Kn-Namespace]","values":["eventing-e2e3"]}]}]}}
  creationTimestamp: "2025-01-09T14:46:41Z"
  generation: 1
  managedFields:
  - apiVersion: security.istio.io/v1beta1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:kubectl.kubernetes.io/last-applied-configuration: {}
      f:spec:
        .: {}
        f:action: {}
        f:rules: {}
    manager: kubectl-client-side-apply
    operation: Update
    time: "2025-01-09T14:46:41Z"
  name: allow-from-knative-and-istio
  namespace: eventing-e2e3
  resourceVersion: "43842"
  uid: 5bf8fb9f-6235-45c6-bd0b-1fc3085c71d5
spec:
  action: ALLOW
  rules:
  - from:
    - source:
        namespaces:
        - eventing-e2e3
        - knative-serving
        - istio-system
  - from:
    - source:
        namespaces:
        - knative-eventing
    when:
    - key: request.headers[Kn-Namespace]
      values:
      - eventing-e2e3
